--- a/html/about.html
+++ b/html/about.html
@@ -44,7 +44,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="challenge.php">Challenge</a></li>
+            <li><a href="search.html">Search</a></li>
             <li class="active"><a href="about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -58,6 +58,26 @@
         <p class="lead">This is a demo, showing how DR images can be tagged - by the crowd, for the crowd</p>
         <p>Hacked together at <a href="http://hack4.dk">#Hack4DK 2015</a>.</p>
         <p>Based on <a href="http://hack4dk.dr.dk">open data</a> from the archives of DR.</p>
+        <h3>API info</h3>
+        <p>The images and their metadata are represented through a simple API:</p>
+        <div>
+          <h4>Images</h4>
+          <p>Search for images with certain tags:</p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/search?term=search_term_goes_here">/api/images/search?term={term}</a></p>
+          <p>Get random image:</p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/random">/api/images/random</a></p>
+          <p>Get list of images</p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/10/100">api/images/{offset}/{limit}</a></p>
+          <p>Get a smaller image:</p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/img_resize/325445/thumb">/api/img_resize/{image_id}/{thumb|preview}</a></p>
+        </div>
+        <div>
+          <h4>Tags</h4>
+          <p>Get a list of tags:</p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/tags?term=dame">/api/tags?term={search term}</a></p> 
+          <p>Save tags for image:</p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/metadata">/api/image/metadata/{image_id}</a></p> 
+        </div>
       </div>
 
     </div><!-- /.container -->
