--- a/html/about.html
+++ b/html/about.html
@@ -40,12 +40,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.php">Crowdsourcing DR history</a>
+          <a class="navbar-brand" href="/">Crowdsourcing DR history</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="search.html">Search</a></li>
-            <li class="active"><a href="about.html">About</a></li>
+            <li><a href="search">Search</a></li>
+            <li class="active"><a href="about">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
