--- a/test.html
+++ b/test.html
@@ -10,22 +10,9 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/da_DK/sdk.js#xfbml=1&version=v2.4&appId=976309079106997";
+  js.src = "//connect.facebook.net/da_DK/all.js#xfbml=1&version=v2.4&appId=976309079106997";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
-
-  window.fbAsyncInit = function() {
-    // init the FB JS SDK
-    FB.init({
-      appId      : '976309079106997',                        // App ID from the app dashboard
-  //    channelUrl : '//WWW.YOUR_DOMAIN.COM/channel.html', // Channel file for x-domain comms
-      status     : true,                                 // Check Facebook Login status
-      xfbml      : true,                                  // Look for social plugins on the page
-      cookie     : true
-    });
-
-    // Additional initialization code such as adding Event Listeners goes here
-  };
 </script>
 
 <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
