url indepence introduced

--- a/html/about.html
+++ b/html/about.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
     <!-- Open Graph data -->
     <meta property="og:title" content="Crowdsourcing DR Images" />
-    <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9.io/html/index.html" />
-    <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9.io/frontimage.jpg" />
+    <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9users.io/html/index.html" />
+    <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9users.io/frontimage.jpg" />
     <meta property="og:description" content="Help us make DR historic photos accessible!" />
 
     <title>DR crowdsourcing - about</title>
@@ -84,20 +84,20 @@
         <div>
           <h3>Images</h4>
           <h4>Search for images with certain tags:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/search?term=search_term_goes_here">/api/images/search?term={term}</a></p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/search?term=search_term_goes_here">/api/images/search?term={term}</a></p>
           <h4>Get random image:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/random">/api/images/random</a></p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/random">/api/images/random</a></p>
           <h4>Get list of images</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/10/100">api/images/{offset}/{limit}</a></p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/10/100">api/images/{offset}/{limit}</a></p>
           <h4>Get a smaller image:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/img_resize/325445/thumb">/api/img_resize/{image_id}/{thumb|preview}</a></p>
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/img_resize/325445/thumb">/api/img_resize/{image_id}/{thumb|preview}</a></p>
         </div>
         <div>
           <h3>Tags</h3>
           <h4>Get a list of tags:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/tags?term=dame">/api/tags?term={search term}</a></p> 
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/tags?term=dame">/api/tags?term={search term}</a></p> 
           <h4>Save tags for image:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9.io/api/images/metadata">/api/image/metadata/{image_id}</a></p> 
+          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/metadata">/api/image/metadata/{image_id}</a></p> 
         </div>
       </div>
     </div>
