--- a/html/search.html
+++ b/html/search.html
@@ -9,8 +9,8 @@
     <meta name="author" content="">
     <!-- Open Graph data -->
     <meta property="og:title" content="Crowdsourcing DR Images" />
-    <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9.io/html/index.html" />
-    <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9.io/frontimage.jpg" />
+    <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9users.io/html/index.html" />
+    <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9users.io/frontimage.jpg" />
     <meta property="og:description" content="Help us make DR historic photos accessible!" />
     
     
