added danish translation

--- a/html/about.html
+++ b/html/about.html
@@ -11,9 +11,9 @@
     <meta property="og:title" content="Crowdsourcing DR Images" />
     <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9users.io/html/index.html" />
     <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9users.io/frontimage.jpg" />
-    <meta property="og:description" content="Help us make DR historic photos accessible!" />
+    <meta property="og:description" content="Hjælp os med at gøre DR's billeder tilgængelige!" />
 
-    <title>DR crowdsourcing - about</title>
+    <title>Opmærkning af DR's billeder - om projektet</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -32,12 +32,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Crowdsourcing DR history</a>
+          <a class="navbar-brand" href="/">Opmærkning af DR's billeder</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="search">Search</a></li>
-            <li class="active"><a href="about">About</a></li>
+            <li><a href="search">Søg</a></li>
+            <li class="active"><a href="about">Om projektet</a></li>
           </ul>
         </div><!--/.nav-collapse -->
      <!-- </div>-->
@@ -47,7 +47,7 @@
 
       <div class="starter-template">
 <div id="output" class="content markdown-body">
-  <h1>FAQ (in danish)</h1>
+  <h1>FAQ</h1>
 
 <h2>Hvad går projektet ud på?</h2>
 
@@ -74,7 +74,7 @@
 <p>Nej, det er det ikke. DR har stillet billederne til rådighed, men DR har ikke noget med dette projekt at gøre.</p>
 
 <p>De data du taster ind bliver stillet frit til rådighed med det samme.</p></div>
-        <h1>Technical information</h1>
+        <h1>Technical information (english)</h1>
         <p>The project is hacked together at <a href="http://hack4.dk">#Hack4DK 2015</a>.</p>
         <p>Based on <a href="http://hack4dk.dr.dk">open data</a> from the archives of DR.</p>
         <p>Source code at <a href="https://github.com/stumpdk/hack4dk_DR_images">Github</a></p>
@@ -84,20 +84,20 @@
         <div>
           <h3>Images</h4>
           <h4>Search for images with certain tags:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/search?term=search_term_goes_here">/api/images/search?term={term}</a></p>
+          <p><a href="/api/images/search?term=search_term_goes_here">/api/images/search?term={term}</a></p>
           <h4>Get random image:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/random">/api/images/random</a></p>
+          <p><a href="/api/images/random">/api/images/random</a></p>
           <h4>Get list of images</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/10/100">api/images/{offset}/{limit}</a></p>
+          <p><a href="/api/images/10/100">api/images/{offset}/{limit}</a></p>
           <h4>Get a smaller image:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/img_resize/325445/thumb">/api/img_resize/{image_id}/{thumb|preview}</a></p>
+          <p><a href="/api/img_resize/325445/thumb">/api/img_resize/{image_id}/{thumb|preview}</a></p>
         </div>
         <div>
           <h3>Tags</h3>
           <h4>Get a list of tags:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/tags?term=dame">/api/tags?term={search term}</a></p> 
+          <p><a href="/api/tags?term=dame">/api/tags?term={search term}</a></p> 
           <h4>Save tags for image:</h4>
-          <p><a href="https://hack4dk-2015-stumpdk-1.c9users.io/api/images/metadata">/api/image/metadata/{image_id}</a></p> 
+          <p><a href="/api/images/metadata">/api/image/metadata/{image_id}</a></p> 
         </div>
       </div>
     </div>
