--- a/html/about.html
+++ b/html/about.html
@@ -9,9 +9,9 @@
     <meta name="author" content="">
     <!-- Open Graph data -->
     <meta property="og:title" content="Crowdsourcing DR Images" />
-    <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9users.io/html/index.html" />
-    <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9users.io/frontimage.jpg" />
-    <meta property="og:description" content="Hjælp os med at gøre DR's billeder tilgængelige!" />
+    <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9.io/html/index.html" />
+    <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9.io/frontimage.jpg" />
+    <meta property="og:description" content="Hjælp os med at gøre DR's historiske billeder tilgængelige!" />
 
     <title>Opmærkning af DR's billeder - om projektet</title>
 
@@ -60,7 +60,7 @@
 
 <h2>Hvad går projektet ud på?</h2>
 
-<p>Formålet med denne hjemmeside er at gøre DR's historiske billeder tilgængelige. Lige nu ligger de på DR's hjemmeside i en meget stor størrelse, og uden informationer, som gør det muligt at søge i dem.</p>
+<p>DR har digitaliseret 77.000 billeder, som dokumenterer DR's historie. Formålet med denne hjemmeside er at gøre disse billeder tilgængelige. Lige nu ligger de på DR's hjemmeside (se dem <a href="http://hack4dk.dr.dk/gallery/">her</a>), men man kan ikke søge efter bestemte billeder, og de tilgængelige billeder er meget store (cirka 6 megabytes pr. stk).</p>
 
 <p>Dette projekt forsøger at afhjælpe dette problem, ved, med frivilliges hjælp, at opmærke billederne. Når de bliver opmærket med informationer er det muligt at søge efter disse informationer. Og så bliver det lettere at finde rundt i dem.</p>
 
@@ -80,10 +80,14 @@
 
 <h2>Er det DR's projekt?</h2>
 
-<p>Nej, det er det ikke. DR har stillet billederne til rådighed, men DR har ikke noget med dette projekt at gøre.</p>
+<p>Nej, det er det ikke. DR har stillet billederne til rådighed for alle, men DR har ikke noget med dette projekt at gøre.</p>
+<p>Der er pt. ingen aftale med DR om at de vil benytte disse data, men håbet er, at DR vil benytte dataene når/hvis DR selv vil gøre deres billeder mere tilgængelige.</p>
 
-<p>De data du taster ind bliver stillet frit til rådighed med det samme.</p></div>
-        <h1>Technical information (english)</h1>
+<h2>Hvad sker der med mit arbejde?</h2>
+<p>De tags du opretter, bliver stillet frit til rådighed med det samme. Det sker gennem et API (se nedenfor).</p>
+<p>&nbsp;</p>
+</div>
+        <h1>Technical information (in english)</h1>
         <p>The project is hacked together at <a href="http://hack4.dk">#Hack4DK 2015</a>.</p>
         <p>Based on <a href="http://hack4dk.dr.dk">open data</a> from the archives of DR.</p>
         <p>Source code at <a href="https://github.com/stumpdk/hack4dk_DR_images">Github</a></p>
