--- a/html/index.html
+++ b/html/index.html
@@ -132,7 +132,7 @@ visibility:hidden;
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/html">Opmærkning af DR's billeder</a>
+          <a class="navbar-brand" href="./">Opmærkning af DR's billeder</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
