--- a/html/index.html
+++ b/html/index.html
@@ -146,7 +146,8 @@ visibility:hidden;
       <div class="starter-template">
       	<div id="button-container" class="text-center">
 	  		<input type="button" class="btn btn-default btn-margin" id="saveData" value="Gem tags" />
-	  		<input type="button" class="btn btn-default btn-margin" id="get_new_image" value="Hent nyt billede" />
+	  		<!--<input type="button" class="btn btn-default btn-margin" id="get_next_images" value="Hent næste i rækken" />-->
+	  		<input type="button" class="btn btn-default btn-margin" id="get_new_image" value="Hent tilfældigt billede" />
       	</div>
         <p class="text-center" id="status"></p>
         <div>
@@ -215,7 +216,7 @@ visibility:hidden;
 			   $('#get_new_image').prop('disabled', false);
 			   $('#saveData').prop('disabled', false);
 			   $('#image_container').show();
-			   Helper.updateStatus("klik et sted på billedet for at opmærke det. I tvivl om hvordan du kommer i gang? Klik <a href='/html/about'>her</a>");
+			   Helper.updateStatus("klik et sted på billedet for at opmærke det. I tvivl om hvordan du kommer i gang? Klik <a href='html/about'>her</a>");
 			    $('#tagging_image').attr('src', newData.image.resizedUrl);
 				
 				$('#fullsize_url').attr('href', newData.image.originalUrl);
@@ -235,7 +236,17 @@ visibility:hidden;
 				      mouseleave: 'hide',
 				    },
 	
-			    	edit: false
+			    	edit: false,
+			    	
+			    	bloodhoundTypeahead: new Bloodhound({
+					    datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+					    queryTokenizer: Bloodhound.tokenizers.whitespace,
+					    //prefetch: '../data/films/post_1960.json',
+					    remote: {
+					      url: '../api/tags?term=%QUERY',
+					      wildcard: '%QUERY'
+					    }
+				  	})
 				};
 
 				taggd = $('.taggd').taggd( options, [] );
