Added latest page

--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@ visibility:hidden;
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="search">Søg</a></li>
+            <li><a href="latest">Seneste</a></li>
             <li><a href="about">Om projektet</a></li>
           </ul>
         </div>
