--- a/public/about.html
+++ b/public/about.html
@@ -46,6 +46,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="search">Søg</a></li>
+            <li><a href="latest">Seneste</a></li>
             <li class="active"><a href="about">Om projektet</a></li>
           </ul>
         </div><!--/.nav-collapse -->
