--- a/public/latest.html
+++ b/public/latest.html
@@ -62,7 +62,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="search">Søg</a></li>
+            <li><a href="search">Søg</a></li>
+            <li class="active"><a href="latest">Seneste</a></li>
             <li><a href="about">Om projektet</a></li>
           </ul>
         </div><!--/.nav-collapse -->
