fixed url for typeahead suggestions

--- a/public/index.html
+++ b/public/index.html
@@ -265,7 +265,7 @@ visibility:hidden;
 					    queryTokenizer: Bloodhound.tokenizers.whitespace,
 					    //prefetch: '../data/films/post_1960.json',
 					    remote: {
-					      url: '../api/tags?term=%QUERY',
+					      url: Helper.getUrl() + '/api/tags?term=%QUERY',
 					      wildcard: '%QUERY'
 					    }
 				  	})
