--- a/public/about.html
+++ b/public/about.html
@@ -57,7 +57,8 @@
 
       <div class="starter-template">
 <div id="output" class="content markdown-body">
-  <h1>FAQ</h1>
+
+<h1>FAQ</h1>
 
 <h2>Hvad går projektet ud på?</h2>
 
@@ -67,7 +68,7 @@
 
 <h2>Hvordan kommer jeg i gang?</h2>
 
-<p>Gå til <a href="/index.html">forsiden</a>. Du kan opmærke billeder ved at trykke på billedet, og derefter skrive en tekst.</p>
+<p>Gå til <a href="./">forsiden</a>. Du kan opmærke billeder ved at trykke på billedet, og derefter skrive en tekst.</p>
 
 <h2>Hvad skal jeg opmærke?</h2>
 
@@ -84,6 +85,15 @@
 <p>Nej, det er det ikke. DR har stillet billederne til rådighed for alle, men DR har ikke noget med dette projekt at gøre.</p>
 <p>Der er pt. ingen aftale med DR om at de vil benytte disse data, men håbet er, at DR vil benytte dataene når/hvis DR selv vil gøre deres billeder mere tilgængelige.</p>
 
+<h2>Status</h2>
+
+<p>Der er pt. følgende problemer med siden:</p>
+<ul>
+  <li>Man kan kun oprette ét tag ad gangen. Tryk "Gem tag" mellem hvert tag for at undgå problemer.</li>
+  <li>Man kan ikke hente billeder. Funktionaliteten følger senere.</li>
+  <li>Nogle gange kan bliver billedet ikke hentet. Løsning: Genopfrisk browseren.</li>
+</ul>
+
 <h2>Hvad sker der med mit arbejde?</h2>
 <p>De tags du opretter, bliver stillet frit til rådighed med det samme. Det sker gennem et API (se nedenfor).</p>
 <p>&nbsp;</p>
@@ -92,26 +102,24 @@
         <p>The project is hacked together at <a href="http://hack4.dk">#Hack4DK 2015</a>.</p>
         <p>Based on <a href="http://hack4dk.dr.dk">open data</a> from the archives of DR.</p>
         <p>Source code at <a href="https://github.com/stumpdk/hack4dk_DR_images">Github</a></p>
-        <p>Information at <a href="https://hackdash.org/dashboards/hack4dk">Hackdash</a></p>
+        <p>Information at <a href="https://hackdash.org/projects/560eb91c28775a823ff1690b">Hackdash</a></p>
         <h3>API info</h3>
-        <p>The images and their metadata are represented through a simple API:</p>
+        <p>The images and their metadata are represented through a simple API.</p>
         <div>
           <h3>Images</h4>
           <h4>Search for images with certain tags:</h4>
-          <p><a href="/api/images/search?term=search_term_goes_here">/api/images/search?term={term}</a></p>
+          <p><a href="./api/images/search?term=search_term_goes_here">/api/images/search?term={term}</a></p>
           <h4>Get random image:</h4>
-          <p><a href="/api/images/random">/api/images/random</a></p>
+          <p><a href="./api/images/random">/api/images/random</a></p>
           <h4>Get list of images</h4>
-          <p><a href="/api/images/10/100">api/images/{offset}/{limit}</a></p>
-          <h4>Get a smaller image:</h4>
-          <p><a href="/api/img_resize/325445/thumb">/api/img_resize/{image_id}/{thumb|preview}</a></p>
+          <p><a href="./api/images/10/100">api/images/{offset}/{limit}</a></p>
         </div>
         <div>
           <h3>Tags</h3>
           <h4>Get a list of tags:</h4>
-          <p><a href="/api/tags?term=dame">/api/tags?term={search term}</a></p> 
+          <p><a href="./api/tags?term=dame">/api/tags?term={search term}</a></p> 
           <h4>Save tags for image:</h4>
-          <p><a href="/api/images/metadata">/api/image/metadata/{image_id}</a></p> 
+          <p><a href="./api/images/metadata">/api/image/metadata/{image_id}</a></p> 
         </div>
       </div>
     </div>
