--- a/public/about.html
+++ b/public/about.html
@@ -8,10 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Open Graph data -->
-    <meta property="og:title" content="Crowdsourcing DR Images" />
-    <meta property="og:url" content="https://hack4dk-2015-stumpdk-1.c9.io/index.html" />
-    <meta property="og:image" content="https://hack4dk-2015-stumpdk-1.c9.io/frontimage.jpg" />
-    <meta property="og:description" content="Hjælp os med at gøre DR's historiske billeder tilgængelige!" />
+    <meta property="og:title" content="DR's billeder" />
+    <meta property="og:url" content="http://www.bbhenriksen.dk/drsbilleder" />
+    <meta property="og:image" content="http://www.bbhenriksen.dk/drsbilleder/frontimage.jpg" />
+    <meta property="og:description" content="Klik her og hjælp med at få dem på nettet" />
 
     <title>Opmærkning af DR's billeder - om projektet</title>
 
