Added links to Facebook group

--- a/public/about.html
+++ b/public/about.html
@@ -58,6 +58,7 @@
       <div class="starter-template">
 <div id="output" class="content markdown-body">
 
+<h2>Hvis du har spørgsmål eller kommentarer, eller har fundet et sjovt billede, er du velkommen til at dele det på vores <a href"https://www.facebook.com/groups/drsbilleder">gruppe på Facebook</a></h2>
 <h1>FAQ</h1>
 
 <h2>Hvad går projektet ud på?</h2>
@@ -91,7 +92,6 @@
 <ul>
   <li>Man kan kun oprette ét tag ad gangen. Tryk "Gem tag" mellem hvert tag for at undgå problemer.</li>
   <li>Man kan ikke hente billeder. Funktionaliteten følger senere.</li>
-  <li>Nogle gange kan bliver billedet ikke hentet. Løsning: Genopfrisk browseren.</li>
 </ul>
 
 <h2>Hvad sker der med mit arbejde?</h2>
