Updated URL (Facebook doesn't like redirects)

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <!-- Open Graph data -->
     <meta property="og:title" content="Opmærkning af DR's billeder" />
-    <meta property="og:url" content="http://www.bbhenriksen.dk/drsbilleder" />
+    <!--<meta property="og:url" content="http://www.bbhenriksen.dk/drsbilleder" />-->
     <meta property="og:image" content="http://www.bbhenriksen.dk/drsbilleder/frontimage.jpg" />
     <meta property="og:description" content="Klik her og hjælp med at få dem på nettet" />
 
