Correxted syntax error

--- a/public/about.html
+++ b/public/about.html
@@ -58,7 +58,7 @@
       <div class="starter-template">
 <div id="output" class="content markdown-body">
 
-<h2>Hvis du har spørgsmål eller kommentarer, eller har fundet et sjovt billede, er du velkommen til at dele det på vores <a href"https://www.facebook.com/groups/drsbilleder">gruppe på Facebook</a></h2>
+<h2>Hvis du har spørgsmål eller kommentarer, eller har fundet et sjovt billede, er du velkommen til at dele det på vores <a href="https://www.facebook.com/groups/drsbilleder">gruppe på Facebook</a></h2>
 <h1>FAQ</h1>
 
 <h2>Hvad går projektet ud på?</h2>
