--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@ visibility:hidden;
 			   
 			   $('.nav-buttons').each(function(){ $(this).prop('disabled',false); });
 			   $('#image_container').show();
-			   Helper.updateStatus('klik på billedet for at opmærke det. I tvivl om hvordan du kommer i gang? <a href="about">Klik her</a>. Besøg også vores <a href="https://www.facebook.com/groups/drsbilleder">gruppe på Facebook</a>'>);
+			   Helper.updateStatus('klik på billedet for at opmærke det. I tvivl om hvordan du kommer i gang? <a href="about">Klik her</a>. Besøg også vores <a href="https://www.facebook.com/groups/drsbilleder">gruppe på Facebook</a>');
 			    $('#tagging_image').attr('src', newData.image.resizedUrl);
 				
 				$('#fullsize_url').attr('href', newData.image.originalUrl);
