skip scroll to buttons

--- a/public/index.html
+++ b/public/index.html
@@ -234,9 +234,9 @@ visibility:hidden;
 			
 			img.onload = function () {
 			//   $("#button").click(function() {
-				    $('html, body').animate({
+				  /*  $('html, body').animate({
 				        scrollTop: $("#get_last_image").offset().top
-				    }, 150);
+				    }, 150);*/
 			//	});
 			   
 			   $('.nav-buttons').each(function(){ $(this).prop('disabled',false); });
