Corrected help texts concerning the now removed bug

--- a/public/about.html
+++ b/public/about.html
@@ -90,8 +90,7 @@
 
 <p>Der er pt. følgende problemer med siden:</p>
 <ul>
-  <li>Man kan kun oprette ét tag ad gangen. Tryk "Gem tag" mellem hvert tag for at undgå problemer.</li>
-  <li>Man kan ikke hente billeder. Funktionaliteten følger senere.</li>
+  <li>Man kan ikke downloade billeder i fuld størrelse. Funktionaliteten følger senere.</li>
 </ul>
 
 <h2>Hvad sker der med mit arbejde?</h2>
