--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,7 @@ visibility:hidden;
 			   
 			   $('.nav-buttons').each(function(){ $(this).prop('disabled',false); });
 			   $('#image_container').show();
-			   Helper.updateStatus('klik på billedet for at opmærke det. Tryk "gem tags" efter hver opmærkning. Find mere hjælp <a href="about">her</a> og i vores <a href="https://www.facebook.com/groups/drsbilleder">gruppe på Facebook</a>');
+			   Helper.updateStatus('klik på billedet for at opmærke det. Tryk "Gem tags" når du er færdig. Find mere hjælp <a href="about">her</a> og i vores <a href="https://www.facebook.com/groups/drsbilleder">gruppe på Facebook</a>');
 			    $('#tagging_image').attr('src', newData.image.resizedUrl);
 				
 				$('#fullsize_url').attr('href', newData.image.originalUrl);
