Added GA event for saving tags

--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,7 @@ visibility:hidden;
 			$('#saveData').prop('disabled', false);
 			
 		});*/
+		ga('send', 'event', 'image_tagging', 'save');
 		$('#saveData').blur();
 	});
 	
