Updated backend and frontend to additional info, including photografer

--- a/public/index.html
+++ b/public/index.html
@@ -286,6 +286,7 @@ visibility:hidden;
 			    $('#taggd_container').append('<div class="desc text-right">' +
            		'<button type="button" class="btn btn-default btn-xs" id="download-btn"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Hent</button>' +
            		'<button type="button" class="btn btn-default btn-xs" id="share-btn"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> Del på Facebook</button>' +
+           		'<span style="color: black;padding-right: 6px;padding-left: 6px;padding-bottom: 4px;padding-top: 2px;background-color:#adadad;">Fotograf: ' + newData.additional_info.fotograf + '</span>' +
         		'</div>');
         	//	$('#facebook-share-link').attr('data-href', window.location.href.replace('html/','html/static.php'));
 				$('#share-btn').off();
