Improved licens info

--- a/public/about.html
+++ b/public/about.html
@@ -95,6 +95,7 @@
 
 <h2>Hvad sker der med mit arbejde?</h2>
 <p>De tags du opretter, bliver stillet frit til rådighed med det samme. Det sker gennem et API (se nedenfor).</p>
+<p>Både DRs billeder og de genererede data er frit tilgængelige under Creative Commons-licensen CC BY-NC-SA. Læs mere om licensen <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">her</a></p>
 <p>&nbsp;</p>
 </div>
         <h1>Technical information (in english)</h1>
