--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 visibility:hidden;
 }
 .footer {
-  position: absolute;
+  /*position: absolute;*/
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
@@ -180,8 +180,8 @@ visibility:hidden;
         </div>
       </div>
     </div>
-    <footer class="footer">
-<div class="col-xs-1 col-xs-offset-11"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img class="pull-right" alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a></div>
+    <footer class="footer hidden-xs">
+<div class="col-md-1 col-md-offset-11"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img class="pull-right" alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a></div>
     </footer>
     </body>
 
