--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 visibility:hidden;
 }
 .footer {
-  /*position: absolute;*/
+  position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
