corrected typo in title and header for stats

--- a/public/stats.html
+++ b/public/stats.html
@@ -9,12 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Open Graph data -->
-    <meta property="og:title" content="DR's billeder" />
+    <meta property="og:title" content="DRs billeder" />
     <meta property="og:url" content="http://www.bbhenriksen.dk/drsbilleder" />
     <meta property="og:image" content="http://www.bbhenriksen.dk/drsbilleder/frontimage.jpg" />
     <meta property="og:description" content="Klik her og hjælp med at få dem på nettet" />
 
-    <title>Opmærkning af DR's billeder - om projektet</title>
+    <title>Opmærkning af DRs billeder - om projektet</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -155,7 +155,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">DR's billeder</h1>
+                <h1 class="text-center">DRs billeder</h1>
             </div>
         </div>
         <div class="row">
