--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@ visibility:hidden;
 		$('#image_container').hide();
 		$("#image_container").html(
 		'<div id="taggd_container">' + 
-			'<img class="img-full-width" src="" class="taggd" id="tagging_image" />' +
+			'<img class="img-full-width taggd" src="" class="taggd" id="tagging_image" />' +
         '<div>');
         
 		receiver.getImage(image_id).success(function(newData){
